fixed navbar list visibility

--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -70,6 +70,9 @@
     border-bottom: 1px solid var(--primary-color);
 }
 
+.navbar-list{
+    display: none;
+}
 
 
 @media screen and (max-width:992px){
@@ -103,6 +106,7 @@
     }
 
     .navbar-list{
+        display: block;
         position: fixed;
         background-color: rgba(0, 0, 0, 0.8);
         top: 0px;
